fixed alignment issue of input boxes

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -73,7 +73,9 @@ h1 {
 
 .inputFields {
     display: flex;
+    align-items: center;
     gap: 4em;
+    width: 50%;
 }
 
 #mobileInputFields {
